--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,3 +43,102 @@
     --background-lamp-image: url("../images/backgrounds/lamps-inverted.png");
     --footer-background-color: #000;
 }
+
+
+.dark-theme button,
+.dark-theme h1,
+.dark-theme h2,
+.dark-theme h3 {
+    letter-spacing: 5px;
+    font-weight: normal;
+}
+
+.dark-theme .invert-element {
+    transform: rotateZ(180deg) scaleX(-1);
+}
+
+/***  GENERAL STYLES ***/
+
+* {
+    margin: 0;
+    box-sizing: border-box;
+    transition: 1s;
+}
+
+body {
+    background: var(--page-background);
+}
+
+h1,
+h2,
+h3 {
+    font-family: var(--featured-font-family);
+    font-size: 3rem;
+    color: var(--primary-color);
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+p {
+    color: var(--highlight-color);
+}
+
+p,
+input,
+textarea,
+label {
+    font-family: "Libre Baskerville", serif;
+}
+
+button {
+    padding: 16px 32px;
+    background-color: transparent;
+    font-weight: 900;
+    font-family: var(--featured-font-family);
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: background 1s;
+}
+
+main {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+main::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: var(--page-background) no-repeat,
+        url("../images/backgrounds/florest.png") no-repeat;
+    background-size: cover;
+    z-index: -1;
+}
+
+input,
+textarea {
+    border: 2px solid var(--primary-color-contrast);
+    background-color: var(--field-background-color);
+    color: var(--primary-color-contrast);
+    padding: 8px;
+}
+
+input,
+textarea {
+    margin-bottom: 24px;
+}
+
+label {
+    margin-bottom: 8px;
+}
+
+input:focus-visible,
+textarea:focus-visible {
+    outline: none;
+    border-color: black;
+}
